--- a/style.css
+++ b/style.css
@@ -174,10 +174,14 @@ hr {
 .form { 
     padding: 50px 200px;
     background-color: rgb(202, 157, 157);
+    gap: 0px;
 }
 .button{
 
-
+background-color: rgb(236, 20, 85);
+border: none;
+padding: 10px 30px;
+border-radius: 5px;
 
 
 
@@ -186,5 +190,34 @@ hr {
 
 
 display:flex;
+
+}
+.footer{
+
+text-align: center;
+color:red;
+background-color: black;
+padding: 30px 200px;
+margin-top: 30px;
+
+
+}
+.footer-para{
+
+
+    color: white;
+}
+.footer-head{
+    font-family: system-ui;
+    
+}
+
+.email{
+    
+
+padding: 10px 30px;
+border-radius:5px ;
+background-color: rgb(192, 192, 172);
+border: none;
 
 }
